--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
         <div class="container__caixa">
              <h1 class="container__titulo"> Com o Combo+, você pode aproveitar a viagem e passeios por um preço único.</h1>
-             <img src="Combo.png" alt="aproveite ainda mais" class="container__imagem">
+             <img src="Viagem-11--250x250.jpg" alt="aproveite ainda mais" class="container__imagem">
              <a href="https://www.alura.com.br/" class="container__botao"> parcelamento no cartão em até 12x *</a>
              <a href="https://www.alura.com.br/" class="container__botao botao_secundario"> Assinar plano de viagem </a>
              <p class="container__aviso">*O preço pode variar de acordo com seus planos.</p>
         </div>
     </section>
     <section class="container secundario">
-        <img src="Plataformas.png" alt="um monitor e um celular com a alura plus aberto " class="secundario__imagem">
+        <img src="reveillon-cruzeiro-2024-capa.jpg" alt="um monitor e um celular com a alura plus aberto " class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo "> Aproveite do melhor jeito </h2>
             <p class="descricao__texto ">  variedades de passeios e lazer. </p>    
@@ -32,11 +32,11 @@
      <p class="descricao__texto"> Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser. </p>
      <a href="https://www.alura.com.br/" class="container__botao secundario__botao"> Assine o Combo+ </a>
     </div>
-    <img src="Telas.png" alt="tela do alura plus e alura lingua" class="secundario__imagem"> 
+    <img src="festas-de-fim-de-ano.jpg" alt="tela do alura plus e alura lingua" class="secundario__imagem"> 
 </section>
 
 <section class="container secundario">
-    <img src="Notebook.png" alt="Notebook vom a a página do curso HTML5" class="secundario__imagem">
+    <img src="61ab98_1eb0b468fc624452919881c81ffbc34e~mv2.webp" alt="Notebook vom a a página do curso HTML5" class="secundario__imagem">
     <div class="container__descricao">
         <h2 class="descricao__titulo ">  Baixe seus cursos   </h2>
         <p class="descricao__texto "> Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>    
@@ -52,7 +52,7 @@
       <h3 class="lista__item"> TV</h3>
     </li>
     <li>
-      <img src="computador.png" alt=" icone de um coputador        ">
+      <img src="reveillon-cruzeiro-2024-capa.jpg" alt=" icone de um coputador        ">
       <h3 class="lista__item"> Computador </h3>
     </li>
     <li>
