--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h3 class="lista__item"> Computador </h3>
     </li>
     <li>
-      <img src="celular.png" alt="icone de um celular">
+      <img src="navio.jpg" alt="icone de um celular">
       <h3 class="lista__item"> Celular </h3>
     </li> 
    </ul>
