--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
   <ul class="dispositivos__lista">
     <li>
-      <img src="tv.png" alt="icone de televisão">
+      <img src="061220220834436.jpg" alt="icone de televisão">
       <h3 class="lista__item"> TV</h3>
     </li>
     <li>
