--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <section class="container secundario"> 
     <div class="container__descricao"> 
-     <p class="descricao__texto"> Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser. </p>
+     <p class="descricao__texto"> Só o Combo+ oferece para você a viagem dos seus sonhos!  </p>
      <a href="https://www.alura.com.br/" class="container__botao secundario__botao"> Assine o Combo+ </a>
     </div>
     <img src="festas-de-fim-de-ano.jpg" alt="tela do alura plus e alura lingua" class="secundario__imagem"> 
@@ -38,14 +38,14 @@
 <section class="container secundario">
     <img src="61ab98_1eb0b468fc624452919881c81ffbc34e~mv2.webp" alt="Notebook vom a a página do curso HTML5" class="secundario__imagem">
     <div class="container__descricao">
-        <h2 class="descricao__titulo ">  Baixe seus cursos   </h2>
-        <p class="descricao__texto "> Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>    
+        <h2 class="descricao__titulo ">    </h2>
+        <p class="descricao__texto "> Embarque em Santos/São Paulo e o destino final é Maceió/Alagoas.</p>    
 
     </div>
 
 </section>
 <section class="dispositivos">
-      <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+      <h2 class="dispositivos__titulo"> Somente disponível aqui em noso site </h2>
   <ul class="dispositivos__lista">
     <li>
       <img src="061220220834436.jpg" alt="icone de televisão">
@@ -53,11 +53,11 @@
     </li>
     <li>
       <img src="reveillon-cruzeiro-2024-capa.jpg" alt=" icone de um coputador        ">
-      <h3 class="lista__item"> Computador </h3>
+      <h3 class="lista__item">  </h3>
     </li>
     <li>
       <img src="navio.jpg" alt="icone de um celular">
-      <h3 class="lista__item"> Celular </h3>
+      <h3 class="lista__item">  </h3>
     </li> 
    </ul>
 </section>
