--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       <h2 class="dispositivos__titulo"> Somente disponível aqui em noso site </h2>
   <ul class="dispositivos__lista">
     <li>
-      <img src="061220220834436.jpg" alt="viajem conosco.">
+   
       <h3 class="lista__item"> </h3>
     </li>
     <li>
-      <img src="reveillon-cruzeiro-2024-capa.jpg" alt=" icone de um coputador        ">
+      <img src="reveillon-cruzeiro-2024-capa.jpg" alt="viajem conosco">
       <h3 class="lista__item">  </h3>
     </li>
     <li>
